# cloneself

./: .gitignore  CHANGELOG.md  DESCRIPTION.md  LICENSE  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  ai_persona_bot.py  channel_parser.py  install_all.bat  pyproject.toml  requirements.txt  session_name.session  setup.bat  setup.py  start.bat  zen_parser.py
.github/workflows/: python-package.yml
ai_persona_bot/: __init__.py  bot.py
public/: banner.html  section-banners.html
tests/: test_bot.py
